[tool.poetry]
name = "spotijack"
version = "0.1.0"
description = ""
authors = ["Jack Reilly <jack@vianova.io>"]

[tool.poetry.dependencies]
python = "3.8.12"
streamlit = "^1.8.1"
spotipy = "^2.19.0"
sh = "^1.14.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
